# meta

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: __main__.py  const.py  dispatcher.py  enums.py  schema.py  template.py
src/base_types/: any_of.py  array.py
src/body/: body.py  recent_changes.py  version.py
src/methods/: argument.py  method.py  return_type.py
src/objects/: __init__.py  object.py  property.py
src/templates/: enums.py.jinja2  methods.py.jinja2  objects.py.jinja2
src/utils/: format.py  wrap.py
